# test_cursor_agent_generate_lib_controller_codes

./: .gitignore  Cargo.toml  README.md  prompt_template.md
android_hello/: hello.c
src/: config.rs  lib.rs  main.rs
src/config/: install.rs
src/package/: downloader.rs  mod.rs  package_info.rs
src/utils/: mod.rs  url.rs
sysroot/: cpp-x86-64-linux-gnu_9.3.0-1ubuntu2_arm64.deb
