[package]
name = "mini-apt"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
flate2 = "1.0"
md5 = "0.7"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
